--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    volumes:
-      - ./app:/usr/src/app 
-    command: sh -c "npm run dev"
+    command: sh -c "npm run build && npm run start"
     ports:
       - "3000:3000"
